--- a/pom.xml
+++ b/pom.xml
@@ -104,7 +104,7 @@
 	    <snapshotRepository>
 	      <id>nexus</id>
 	      <name>Mithun Technologies Snapshot Nexus Repository </name>
-	      <url>http://54.159.184.204:8081/repository/maven-snapshots/</url>
+	      <url>http://54.159.184.204:8081/repository/demo/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
